--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Asia/Dhaka
 
 title: Ahammad Nafiz # the main title
 
-tagline: AI Enthusiast x Design Aficionado # it will display as the sub-title
+tagline: Python | Machine Learning  # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   Ahammad Nafiz Blog, Github, Machine Learning, Python.
