--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -31,9 +31,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          # submodules: true
-          # If using the 'assets' git submodule from Chirpy Starter, uncomment above
-          # (See: https://github.com/cotes2020/chirpy-starter/tree/main/assets)
+          submodules: true
 
       - name: Setup Pages
         id: pages
@@ -44,6 +42,11 @@ jobs:
         with:
           ruby-version: 3.2
           bundler-cache: true
+
+      - name: Check bundler
+        run: |
+          bundle env
+          bundle list | grep jekyll
 
       - name: Build site
         run: bundle exec jekyll b -d "_site${{ steps.pages.outputs.base_path }}"
